# WIP-management

./: .gitignore  README.md  _index.json  pyproject.toml  requirements.txt  structure.txt
tests/: test_bug_regression.py
wip_management/: __init__.py  __main__.py  config.py
wip_management.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
wip_management/application/: ports.py
wip_management/application/services/: orchestrator.py
wip_management/application/state/: __init__.py  reducers.py  snapshots.py  state_store.py
wip_management/application/use_cases/: auto_group.py  ingest_signals.py  manual_group.py  recompute_projection.py
wip_management/domain/: events.py  state_machine.py
wip_management/domain/models/: tray.py  trolley.py
wip_management/domain/rules/: __init__.py  classifier.py  grouping_rules.py
wip_management/infrastructure/: cache.py
wip_management/infrastructure/messaging/: event_bus.py
wip_management/infrastructure/persistence/: state_repo.py
wip_management/infrastructure/realtime/: __init__.py  ws_server.py
wip_management/infrastructure/sqlserver/: __init__.py  ccu_repo.py  connection.py  dashboard_repo.py  delta_tracker.py  fpc_repo.py  window_cache.py
wip_management/presentation/api/: http.py  ws.py
wip_management/presentation/ui/: __init__.py  charts.py  components.py  dialogs.py  mapper.py  notifications.py  theme.py  viewmodels.py  widgets.py
